--- a/powerful-core/pom.xml
+++ b/powerful-core/pom.xml
@@ -38,7 +38,8 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
-      <version>3.0</version>
+      <version>2.5</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
