--- a/powerful-spring-mvc/pom.xml
+++ b/powerful-spring-mvc/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>zhranklin</groupId>
             <artifactId>powerful-core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
 
