--- a/powerful-core/pom.xml
+++ b/powerful-core/pom.xml
@@ -10,7 +10,7 @@
   </parent>
   <groupId>zhranklin</groupId>
   <artifactId>powerful-core</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <name>powerful-core</name>
   <description>Demo project for Spring Boot</description>
 
