--- a/powerful-springboot-1/Dockerfile
+++ b/powerful-springboot-1/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:8u222
-ADD target/powerful-springboot-1-0.0.1-SNAPSHOT.jar /app.jar
+ADD target/powerful-springboot-1-0.0.1.jar /app.jar
 ENTRYPOINT java $JAVA_OPTS -jar /app.jar
