--- a/powerful-spring-mvc/Dockerfile
+++ b/powerful-spring-mvc/Dockerfile
@@ -1,3 +1,3 @@
 FROM tomcat:8.0.49-jre8
 RUN rm -r webapps
-COPY ./target/powerful-spring-mvc-1.0-SNAPSHOT.war webapps/ROOT.war
+COPY ./target/powerful-spring-mvc.war webapps/ROOT.war
