--- a/powerful-spring-mvc/pom.xml
+++ b/powerful-spring-mvc/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <groupId>zhranklin</groupId>
     <artifactId>powerful-spring-mvc</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 
     <packaging>war</packaging>
@@ -50,6 +50,7 @@
     </dependencies>
 
   <build>
+    <finalName>powerful-spring-mvc</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
