--- a/powerful-springboot-1/pom.xml
+++ b/powerful-springboot-1/pom.xml
@@ -35,6 +35,7 @@
   </dependencies>
 
   <build>
+    <finalName>powerful-springboot-1</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
