--- a/powerful-springboot-2/Dockerfile
+++ b/powerful-springboot-2/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:8u222
-ADD target/powerful-springboot-2-0.0.1-SNAPSHOT.jar /app.jar
+ADD target/powerful-springboot-2.jar /app.jar
 ENTRYPOINT java $JAVA_OPTS -jar /app.jar
