--- a/powerful-springboot-1/pom.xml
+++ b/powerful-springboot-1/pom.xml
@@ -28,9 +28,15 @@
     </dependency>
     <dependency>
       <groupId>zhranklin</groupId>
+      <artifactId>powerful-common</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>zhranklin</groupId>
       <artifactId>powerful-core</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
+
 
   </dependencies>
 
