--- a/powerful-springboot-2/src/main/resources/application.properties
+++ b/powerful-springboot-2/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 #hornetq.embedded.queues=testQueue
 server.port=8082
+spring.application.name=grpc-a
+grpc.server.port=9547
+
+grpc.client.grpc-a.negotiationType=plaintext
+grpc.client.grpc-b.negotiationType=plaintext
+grpc.client.grpc-c.negotiationType=plaintext
+
+
+eureka.client.registerWithEureka=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8877/eureka/
+eureka.client.instance.prefer-ip-address=true
