--- a/powerful-springboot-2/pom.xml
+++ b/powerful-springboot-2/pom.xml
@@ -15,6 +15,7 @@
 
   <properties>
     <java.version>1.8</java.version>
+    <grpc.spring.boot.starter.version>2.4.0.RELEASE</grpc.spring.boot.starter.version>
   </properties>
 
   <dependencies>
@@ -35,6 +36,22 @@
       <groupId>zhranklin</groupId>
       <artifactId>powerful-core</artifactId>
       <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>net.devh</groupId>
+      <artifactId>grpc-server-spring-boot-starter</artifactId>
+      <version>${grpc.spring.boot.starter.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>net.devh</groupId>
+      <artifactId>grpc-client-spring-boot-starter</artifactId>
+      <version>${grpc.spring.boot.starter.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+      <version>2.1.1.RELEASE</version>
     </dependency>
   </dependencies>
 
