--- a/powerful-springboot-grpc/src/main/resources/application.properties
+++ b/powerful-springboot-grpc/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #hornetq.embedded.queues=testQueue
-server.port=8082
-spring.application.name=http-a
-grpc.server.port=9547
+server.port=8083
+spring.application.name=grpc-b
+grpc.server.port=9548
 
 grpc.client.grpc-a.negotiationType=plaintext
 grpc.client.grpc-b.negotiationType=plaintext
