--- a/powerful-core/pom.xml
+++ b/powerful-core/pom.xml
@@ -77,6 +77,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>net.devh</groupId>
+      <artifactId>grpc-client-spring-boot-autoconfigure</artifactId>
+      <version>2.4.0.RELEASE</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
