--- a/powerful-springboot-grpc/pom.xml
+++ b/powerful-springboot-grpc/pom.xml
@@ -9,9 +9,9 @@
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>zhranklin</groupId>
-  <artifactId>powerful-springboot-2</artifactId>
+  <artifactId>powerful-springboot-grpc</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>powerful-springboot-2</name>
+  <name>powerful-springboot-grpc</name>
 
   <properties>
     <java.version>1.8</java.version>
@@ -51,12 +51,12 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-      <version>2.1.3.RELEASE</version>
+      <version>2.1.1.RELEASE</version>
     </dependency>
   </dependencies>
 
   <build>
-    <finalName>powerful-springboot-2</finalName>
+    <finalName>powerful-springboot-grpc</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
