--- a/powerful-spring-mvc/pom.xml
+++ b/powerful-spring-mvc/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>powerful-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-client-spring-boot-autoconfigure</artifactId>
+            <version>2.4.0.RELEASE</version>
+        </dependency>
     </dependencies>
 
   <build>
