--- a/powerful-springboot-2/pom.xml
+++ b/powerful-springboot-2/pom.xml
@@ -52,6 +52,12 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
       <version>2.1.3.RELEASE</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>hystrix-core</artifactId>
+          <groupId>com.netflix.hystrix</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
