--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>powerful-springboot-2</module>
     <module>powerful-springboot-grpc</module>
     <module>powerful-common</module>
+    <module>powerful-cases</module>
   </modules>
 
 </project>
