--- a/powerful-springboot-2/Dockerfile
+++ b/powerful-springboot-2/Dockerfile
@@ -1,3 +1,6 @@
 FROM openjdk:8u222
+ENV TZ=Asia/Shanghai LANG=C.UTF-8 LANGUAGE=C.UTF-8 LC_ALL=C.UTF-8
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN apt-get update && apt-get install -y unzip wget nano vim expat net-tools less netcat lsof
 ADD target/powerful-springboot-2.jar /app.jar
 ENTRYPOINT java $JAVA_OPTS -jar /app.jar
