--- a/powerful-springboot-grpc/Dockerfile
+++ b/powerful-springboot-grpc/Dockerfile
@@ -1,6 +1,3 @@
-FROM openjdk:8u222
-ENV TZ=Asia/Shanghai LANG=C.UTF-8 LANGUAGE=C.UTF-8 LC_ALL=C.UTF-8
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-RUN apt-get update && apt-get install -y unzip wget nano vim expat net-tools less netcat lsof
+FROM zhranklin/powerful-base-java
 ADD target/powerful-springboot-grpc.jar /app.jar
 ENTRYPOINT java $JAVA_OPTS -jar /app.jar
