--- a/powerful-cases/config-example.yaml
+++ b/powerful-cases/config-example.yaml
@@ -3,49 +3,49 @@ targetMappings:
   b: localhost:8081
 requestCases:
   test:
-    tell: <a>/aaa/bbb,
+    call: <a>/aaa/bbb,
     by: http
     to:
-      thenDelay: 0
-      thenReturn: "{{p(version)}}"
+      delay: 0
+      responseFmt: "{{p(version)}}"
     description: 熔断, 正常会返回name和version
   echo_a_delay_1s:
-    tell: <a>
+    call: <a>
     by: http
     to:
-      thenDelay: 1
-      thenReturn: "{{p(version)}}"
+      delay: 1
+      responseFmt: "{{p(version)}}"
     description: 访问a, a加入1s时延后返回自己的版本
   echo_a_with_exception:
-    tell: <a>
+    call: <a>
     by: http
     to:
-     thenReturn: "{{p(version)}}"
-    thenThrowByPercent: 60
+     responseFmt: "{{p(version)}}"
+    errorByPercent: 60
     description: 访问a, 返回自己的版本
   redirect_a_b:
-    tell: <a>
+    call: <a>
     by: http
     to:
-      forTimes: 10
+      times: 10
       collectBy: list
-      tell: <b>
+      call: <b>
       by: http
       to:
-        thenDelay: 0.1
-        thenReturn: "{{p(version)}}"
-      thenDelay: 0.1
-      thenReturn: "{{p(version)}} -> ({{statusCode()}}){{resultBody()}}"
+        delay: 0.1
+        responseFmt: "{{p(version)}}"
+      delay: 0.1
+      responseFmt: "{{p(version)}} -> ({{statusCode()}}){{resultBody()}}"
   description: 让a访问b, 返回调用链路, 用版本表示调用结点
   redirect_a_c:
-    tell: <a>
+    call: <a>
     by: http
     to:
-      tell: <c>
+      call: <c>
       by: http
       to:
-        thenDelay: 0.5
-        thenReturn: "{{p(version)}}"
-      thenDelay: 0.5
-      thenReturn: "{{p(version)}} -> {{resultBody()}}"
+        delay: 0.5
+        responseFmt: "{{p(version)}}"
+      delay: 0.5
+      responseFmt: "{{p(version)}} -> {{resultBody()}}"
     description: 让a访问c, 中间加入延迟, 返回调用链路, 用版本表示调用结点
