--- a/powerful-front/package.json
+++ b/powerful-front/package.json
@@ -6,14 +6,19 @@
     "@jsonforms/core": "^2.3.2",
     "@jsonforms/material-renderers": "^2.3.2",
     "@jsonforms/react": "^2.3.2",
+    "@jsonforms/vanilla-renderers": "^2.3.2",
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
     "@types/jest": "^24.0.23",
+    "@types/jquery": "^3.3.31",
+    "@types/js-yaml": "^3.12.1",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
+    "jquery": "^3.4.1",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
