--- a/powerful-core/pom.xml
+++ b/powerful-core/pom.xml
@@ -32,6 +32,16 @@
       <version>5.1.7.RELEASE</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.8.7</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-yaml</artifactId>
+      <version>2.8.7</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
