图标+网页标题

--- a/powerful-core/src/main/resources/static/manifest.json
+++ b/powerful-core/src/main/resources/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Powerful",
+  "name": "Service Mesh Testing Tool",
   "icons": [
     {
       "src": "favicon.ico",
