--- a/powerful-core/pom.xml
+++ b/powerful-core/pom.xml
@@ -93,6 +93,12 @@
       <version>2.4.0.RELEASE</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>net.devh</groupId>
+      <artifactId>grpc-server-spring-boot-starter</artifactId>
+      <version>2.4.0.RELEASE</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
