--- a/powerful-springboot-2/pom.xml
+++ b/powerful-springboot-2/pom.xml
@@ -48,6 +48,10 @@
       <artifactId>grpc-client-spring-boot-starter</artifactId>
       <version>${grpc.spring.boot.starter.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-freemarker</artifactId>
+    </dependency>
 <!--    <dependency>-->
 <!--      <groupId>org.springframework.cloud</groupId>-->
 <!--      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
