--- a/operator/helm-charts/powerful/templates/powerful-cases.yaml
+++ b/operator/helm-charts/powerful/templates/powerful-cases.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: {{ include "namespace" .}}
   labels:
     release: {{ .Release.Name }}
-    framew-env: prod
-    framew.zhranklin.io/project: project1
+    framew-env: {{ .Values.framewEnv }}
+    framew.zhranklin.io/project: {{ .Values.framewProject }}
     {{ .Values.serviceAppLabelName }}: powerful-cases
 spec:
   type: ClusterIP
