hub、env、project改为默认可指定

--- a/operator/helm-charts/powerful/templates/powerful-cases.yaml
+++ b/operator/helm-charts/powerful/templates/powerful-cases.yaml
@@ -39,7 +39,7 @@ spec:
     spec:
       containers:
       - name: app
-        image: "{{ .Values.hub }}/{{ .Values.image }}"
+        image: "{{ include "hub" .}}/{{ .Values.image }}"
         imagePullPolicy: IfNotPresent
         env:
         - name: JAVA_OPTS
