fix: VERSION环境变量取值错误问题

--- a/operator/helm-charts/powerful/templates/powerful.yaml
+++ b/operator/helm-charts/powerful/templates/powerful.yaml
@@ -61,7 +61,7 @@ spec:
         - name: APP
           value: {{ $app.name }}
         - name: VERSION
-          value: {{ $deploy.name | quote }}
+          value: {{ $deploy.version | quote }}
 {{- if $deploy.image }}
         image: "{{ $.Values.hub }}/{{ $deploy.image }}"
 {{- else }}
