默认版本显示为空串

--- a/operator/helm-charts/powerful/templates/powerful-cases.yaml
+++ b/operator/helm-charts/powerful/templates/powerful-cases.yaml
@@ -47,7 +47,7 @@ spec:
         - name: APP
           value: cases
         - name: VERSION
-          value: v0
+          value: ""
         volumeMounts:
         - name: powerful-cases
           mountPath: /etc/powerful-cases
