--- a/operator/helm-charts/powerful/templates/vs-dr.yaml
+++ b/operator/helm-charts/powerful/templates/vs-dr.yaml
@@ -1,12 +1,12 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
-  name: powerful-b
+  name: powerful-a
   namespace: {{ include "namespace" .}}
   labels:
     release: {{ .Release.Name }}
 spec:
-  host: b
+  host: a
   subsets:
   - name: v1
     labels:
@@ -18,24 +18,24 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: powerful-b
+  name: powerful-a
   namespace: {{ include "namespace" .}}
   labels:
     release: {{ .Release.Name }}
 spec:
   hosts:
-  - b
+  - a
   http:
   - match:
     - uri:
         regex: /matchTest/uri/reg.cho/execute
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 90
     - destination:
-        host: b
+        host: a
         subset: v2
       weight: 10
   - match:
@@ -43,11 +43,11 @@ spec:
         prefix: /matchTest/uri/preEcho
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 90
     - destination:
-        host: b
+        host: a
         subset: v2
       weight: 10
   - match:
@@ -55,11 +55,11 @@ spec:
         exact: /matchTest/uri/exEcho/execute
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 90
     - destination:
-        host: b
+        host: a
         subset: v2
       weight: 10
   - match:
@@ -70,11 +70,11 @@ spec:
         exact: /loginTest/execute
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 90
     - destination:
-        host: b
+        host: a
         subset: v2
       weight: 10
   - match:
@@ -83,11 +83,11 @@ spec:
           exact: test
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 90
     - destination:
-        host: b
+        host: a
         subset: v2
       weight: 10
   - match:
@@ -96,11 +96,11 @@ spec:
           prefix: yanxuan-test
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 90
     - destination:
-        host: b
+        host: a
         subset: v2
       weight: 10
   - match:
@@ -109,11 +109,11 @@ spec:
           exact: yanxuan-test
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 90
     - destination:
-        host: b
+        host: a
         subset: v2
       weight: 10
   - match:
@@ -122,11 +122,11 @@ spec:
           regex: ^[0-9]{5}$
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 90
     - destination:
-        host: b
+        host: a
         subset: v2
       weight: 10
   - match:
@@ -135,11 +135,11 @@ spec:
           regex: ^[0-9]{5}$
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 90
     - destination:
-        host: b
+        host: a
         subset: v2
       weight: 10
   - match:
@@ -147,7 +147,7 @@ spec:
         prefix: /normalTest
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 100
   - fault:
@@ -160,7 +160,7 @@ spec:
         prefix: /delayTest
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 100
   - match:
@@ -172,7 +172,7 @@ spec:
     - uri:
         prefix: /redirectAuthority
     redirect:
-      authority: new-b
+      authority: new-a
   - match:
     - uri:
         prefix: /rewriteURL
@@ -180,17 +180,17 @@ spec:
       uri: /normalTest
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 100
   - match:
     - uri:
         prefix: /rewriteAuthority
     rewrite:
-      authority: b/normalTest
+      authority: a/normalTest
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 100
   - fault:
@@ -203,7 +203,7 @@ spec:
         prefix: /abortTest
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 100
   - match:
@@ -215,7 +215,7 @@ spec:
       retryOn: 5xx
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 100
   - match:
@@ -226,7 +226,7 @@ spec:
       perTryTimeout: 1000ms
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 100
   - match:
@@ -234,7 +234,7 @@ spec:
         prefix: /headerTest/req/add
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       headers:
         request:
@@ -246,7 +246,7 @@ spec:
         prefix: /headerTest/req/set
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       headers:
         request:
@@ -258,7 +258,7 @@ spec:
         prefix: /headerTest/req/remove
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       headers:
         request:
@@ -270,7 +270,7 @@ spec:
         prefix: /headerTest/resp/add
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       headers:
         response:
@@ -282,7 +282,7 @@ spec:
         prefix: /headerTest/resp/set
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       headers:
         response:
@@ -294,7 +294,7 @@ spec:
         prefix: /headerTest/resp/remove
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       headers:
         response:
@@ -305,13 +305,13 @@ spec:
     - uri:
         prefix: /mirrorTest
     mirror:
-      host: b
+      host: a
       subset: v2
     route:
     - destination:
-        host: b
+        host: a
         subset: v1
       weight: 100
   - route:
     - destination:
-        host: b
+        host: a
