--- a/operator/helm-charts/powerful/templates/powerful.yaml
+++ b/operator/helm-charts/powerful/templates/powerful.yaml
@@ -45,6 +45,9 @@ spec:
     metadata:
       annotations:
         framew.zhranklin.io/istioEnv: {{ $.Values.istioEnv }}
+{{- if $deploy.annotations }}
+{{ $deploy.annotations | toYaml | indent 8 }}
+{{- end }}
       labels:
         {{ $.Values.appLabelName }}: {{ $app.name }}
         release: {{ $.Release.Name }}
