--- a/operator/helm-charts/powerful/templates/vs-dr.yaml
+++ b/operator/helm-charts/powerful/templates/vs-dr.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.enableCRs }}
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
@@ -315,3 +316,4 @@ spec:
   - route:
     - destination:
         host: a
+{{ end }}
