--- a/operator/helm-charts/powerful/templates/powerful-cases.yaml
+++ b/operator/helm-charts/powerful/templates/powerful-cases.yaml
@@ -37,6 +37,9 @@ spec:
       labels:
         release: {{ .Release.Name }}
         {{ .Values.appLabelName }}: powerful-cases
+{{- if .Values.istioCluster }}
+        istio-cluster: {{ .Values.istioCluster }}
+{{ end }}
     spec:
       containers:
       - name: app
