--- a/operator/helm-charts/powerful/templates/powerful.yaml
+++ b/operator/helm-charts/powerful/templates/powerful.yaml
@@ -104,6 +104,9 @@ spec:
       tolerations:
 {{ toYaml $.Values.tolerations | indent 6 }}
 {{- end }}
+{{- if $.Values.serviceAccount }}
+      serviceAccountName: {{ $.Values.serviceAccount }}
+{{- end }}
 ---
 {{- end }}
 {{- end }}
