--- a/operator/helm-charts/powerful/templates/powerful-cases.yaml
+++ b/operator/helm-charts/powerful/templates/powerful-cases.yaml
@@ -32,7 +32,12 @@ spec:
   template:
     metadata:
       annotations:
+{{- if .Values.istioEnv }}
         framew.zhranklin.io/istioEnv: {{ .Values.istioEnv }}
+{{- end }}
+{{- if .Values.revision }}
+        framew.zhranklin.io/revision: {{ .Values.revision }}
+{{- end }}
         checksum/config-volume: {{ .Files.Get "files/cases.yaml" | sha256sum }}
       labels:
         release: {{ .Release.Name }}
