指定inject注解、支持ratelimit开关、修复dr中的version标签

--- a/operator/helm-charts/powerful/templates/powerful.yaml
+++ b/operator/helm-charts/powerful/templates/powerful.yaml
@@ -47,6 +47,7 @@ spec:
 {{- if $.Values.revision }}
         framew.zhranklin.io/revision: {{ $.Values.revision }}
 {{- end }}
+        sidecar.istio.io/inject: "{{ $deploy.inject | default $.Values.inject }}"
 {{- if $deploy.annotations }}
 {{ $deploy.annotations | toYaml | indent 8 }}
 {{- end }}
