--- a/operator/helm-charts/powerful/templates/powerful-cases.yaml
+++ b/operator/helm-charts/powerful/templates/powerful-cases.yaml
@@ -38,6 +38,7 @@ spec:
 {{- if .Values.revision }}
         framew.zhranklin.io/revision: {{ .Values.revision }}
 {{- end }}
+        sidecar.istio.io/inject: "{{ .Values.cases.inject | default .Values.inject }}"
         checksum/config-volume: {{ .Files.Get "files/cases.yaml" | sha256sum }}
       labels:
         release: {{ .Release.Name }}
