--- a/operator/helm-charts/powerful/templates/vs-dr.yaml
+++ b/operator/helm-charts/powerful/templates/vs-dr.yaml
@@ -11,10 +11,10 @@ spec:
   subsets:
   - name: v1
     labels:
-      version: v1
+      {{ .Values.versionLabelName }}: v1
   - name: v2
     labels:
-      version: v2
+      {{ .Values.versionLabelName }}: v2
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
