--- a/operator/helm-charts/powerful/templates/powerful-cases.yaml
+++ b/operator/helm-charts/powerful/templates/powerful-cases.yaml
@@ -53,7 +53,7 @@ spec:
         imagePullPolicy: IfNotPresent
         env:
         - name: JAVA_OPTS
-          value: "{{ "-Dserver.port=8080 -DdefaultTraceNodeTmpl={{env(APP)}}|{{env(VERSION)}}({{statusCode()}}) -DdefaultCollectBy=stat_count" }}"
+          value: "{{ "-Dserver.port=8080" }}"
         - name: APP
           value: cases
         - name: VERSION
