--- a/powerful-springboot-2/Dockerfile
+++ b/powerful-springboot-2/Dockerfile
@@ -1,3 +1,3 @@
 FROM zhranklin/powerful-base-java
 ADD target/powerful-springboot-2.jar /app.jar
-ENTRYPOINT java $JAVA_OPTS -jar /app.jar
+ENTRYPOINT /start.sh
