由于与agent自带grpc库冲突, 暂时关闭对grpc的支持

--- a/powerful-springboot-2/pom.xml
+++ b/powerful-springboot-2/pom.xml
@@ -81,6 +81,107 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <!--由于与agent自带grpc库冲突, 暂时关闭对grpc的支持, 以下全部为grpc及它们所依赖的库-->
+        <configuration>
+          <excludes>
+            <exclude>
+              <groupId>com.foo</groupId>
+              <artifactId>bar</artifactId>
+            </exclude>
+            <exclude>
+              <artifactId>annotations</artifactId>
+              <groupId>com.google.android</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>proto-google-common-protos</artifactId>
+              <groupId>com.google.api.grpc</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>jsr305</artifactId>
+              <groupId>com.google.code.findbugs</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>gson</artifactId>
+              <groupId>com.google.code.gson</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>error_prone_annotations</artifactId>
+              <groupId>com.google.errorprone</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>protobuf-java</artifactId>
+              <groupId>com.google.protobuf</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>protobuf-java-util</artifactId>
+              <groupId>com.google.protobuf</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>re2j</artifactId>
+              <groupId>com.google.re2j</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>grpc-context</artifactId>
+              <groupId>io.grpc</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>grpc-core</artifactId>
+              <groupId>io.grpc</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>grpc-netty-shaded</artifactId>
+              <groupId>io.grpc</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>grpc-protobuf</artifactId>
+              <groupId>io.grpc</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>grpc-protobuf-lite</artifactId>
+              <groupId>io.grpc</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>grpc-services</artifactId>
+              <groupId>io.grpc</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>grpc-stub</artifactId>
+              <groupId>io.grpc</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>opencensus-api</artifactId>
+              <groupId>io.opencensus</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>opencensus-contrib-grpc-metrics</artifactId>
+              <groupId>io.opencensus</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>grpc-common-spring-boot</artifactId>
+              <groupId>net.devh</groupId>
+            </exclude>
+            <exclude>
+              <artifactId>grpc-client-spring-boot-autoconfigure</artifactId>
+              <groupId>net.devh</groupId>
+            </exclude>
+            <exclude>
+              <groupId>net.devh</groupId>
+              <artifactId>grpc-client-spring-boot-starter</artifactId>
+            </exclude>
+            <exclude>
+              <artifactId>grpc-server-spring-boot-autoconfigure</artifactId>
+              <groupId>net.devh</groupId>
+            </exclude>
+            <exclude>
+              <groupId>net.devh</groupId>
+              <artifactId>grpc-server-spring-boot-starter</artifactId>
+            </exclude>
+            <exclude>
+              <artifactId>animal-sniffer-annotations</artifactId>
+              <groupId>org.codehaus.mojo</groupId>
+            </exclude>
+          </excludes>
+        </configuration>
       </plugin>
     </plugins>
   </build>
